<resources>
    <string name="app_name">Уроки рисования</string>
    <string name="action_settings">О приложении</string>

    <string name="menu_Patreon_home">На Patreon</string>
    <string name="menu_about_patreon">Что такое Patreon?</string>
    <string name="menu">Меню</string>
    <string name="menu_myArtMaterial">Арт-материалы</string>
    <string name="menu_free_lessons">Бесплатные уроки</string>
    <string name="menu_stringsOfLearn">Уровень \"Базовый\"</string>
    <string name="menu_stringsOfLearn1">Уровень \"Продвинутый\"</string>
    <string name="menu_Youtube_home">YouTube Автора</string>
    <string name="add">Дополнительно</string>
    <string name="menu_WorkOfStudent">Работы учеников</string>
    <string name="menu_State">Статьи</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_send">О проекте Patreon</string>
    <string name="menu_To_Ask">Обратная связь</string>

    //Activity advanced
    <string name="j">Законченные работы :</string>

    //Descript activity 6 $
    <string name="Descript_text">Чтобы перейти к уроку выберите интересующую вас часть видео. Для просмотра вам следует зайти на Patreon или Boosty под своей
        учётной записью, на которую оформлена подписка. Приятного просмотра и обучения!\n</string>
    <string name="Descript_text1">Чтобы перейти к уроку выберите интересующую вас часть видео. Для просмотра вам следует зайти на </string>
    <string name="Boosty"> Boosty</string>
    <string name="Descript_text2"> или</string>
    <string name="Patreon"> Patreon</string>
    <string name="Descript_text3"> под своей учётной записью, на которую оформлена подписка. Приятного просмотра и обучения!\n</string>

    <string name="btn">Часть 1</string>
    <string name="btnSmall">Часть 1</string>
    <string name="btn2">Часть 2</string>
    <string name="btn3">Часть 3</string>
    <string name="btn4">Часть 4</string>
    <string name="btn5">Часть 5</string>
    <string name="btn6">Часть 6</string>
    <string name="btn7">Часть 7</string>
    <string name="btnboosty">Boosty</string>
    <string name="btnToSite">На сайт автора</string>
    <string name="textlink2">Ссылки на видео</string>


    //что такое Patrion
    <string name="string">Patreon - это платформа, на которой находится обучающий проект.
        Все уроки курса поделены на два уровня доступа — Базовый и Продвинутый. Также есть третий,
        Эксклюзивный уровень, который включает в себя анализ ваших работ. Обучение оплачивается ежемесячно
        (1-го числа) и составляет 6 долларов на Базовом, 9 на Продвинутом и 21 на Эксклюзивном уровне.
        Оформляя подписку, вы получаете доступ сразу ко всем видео на выбранном вами уровне. В проекте
        ежемесячно появляются новые мастер-классы и список уроков в приложении регулярно обновляется.
        Дополнительную информацию о регистрации и обучении вы найдёте в видео.\n</string>

    //freeLesson
    <string name="forFreeLesson">Мастер-класс "Торт с клубникой" - это лишь малая часть всех уроков.
        Для доступа к остальным мастер-классам, общей продолжительностью более 200 академических часов, вам следует оформить подписку на Patreon или Boosty.
        Подробнее об обучении можно узнать на сайте автора\n </string>

    //О Проекте
    <string name="str">Видеоуроки по рисованию</string>
    <string name="str1">Разработчик : "Omelchenko Stanislav"</string>
    <string name="str2">Версия сборки 1.0"</string>
    <string name="str3">Оцените приложение в GooglePlay"</string>


    //'Экран и меню context_menu
    <string name="size_menu">Размер экрана</string>
    <string name="size_small">Small</string>
    <string name="size_nirmal">Normal</string>
    <string name="size_normal">Normal-v26</string>
    <string name="size_nirmal_land">NormalLand</string>
    <string name="size_large">Large</string>
    <string name="size_large_v26">Large-v26</string>
    <string name="size_large_land">Large_land</string>
    <string name="size_XLarge">XLarge</string>
    <string name="size_XLarge_land">XLarge_Land</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>
