<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".About_app">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str">

    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str1">

    </Button>
    <Button
        android:id="@+id/btn_countOfVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str2">
    </Button>
    <Button
        android:id="@+id/btnshare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str3">

    </Button>

</LinearLayout>