<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_list_Of_learn"
        android:label="@string/menu_stringsOfLearn"
        android:name="com.Julia_lessons.juliaomelart.ui.send.SendFragment"
        tools:layout="@layout/fragment_learn6doll" />

    <fragment
        android:id="@+id/nav_list_Of_learn_advance"
        android:label="@string/menu_stringsOfLearn1"
        android:name="com.Julia_lessons.juliaomelart.ui.send.SendFragment"
        tools:layout="@layout/fragment_lear9doll" />

    <fragment
        android:id="@+id/nav_free_lesson"
        android:label="@string/menu_free_lessons"
        android:name="com.Julia_lessons.juliaomelart.ui.send.SendFragment"
        tools:layout="@layout/fragment_free_lessons" />

    <fragment
        android:id="@+id/nav_youtube"
        android:label="@string/menu_send"
        android:name="com.Julia_lessons.juliaomelart.ui.send.SendFragment"
        tools:layout="@layout/fragment_youtube" />

    <!--дополнительно-->

    <fragment
        android:id="@+id/nav_State"
        android:label="@string/menu_send"
        android:name="com.Julia_lessons.juliaomelart.ui.send.SendFragment"
        tools:layout="@layout/fragment_state" />
    <fragment
        android:id="@+id/nav_Art_materials"
        android:label="@string/menu_send"
        android:name="com.Julia_lessons.juliaomelart.ui.send.SendFragment"
        tools:layout="@layout/fragment_artmaterials" />
    <fragment
        android:id="@+id/nav_work_of_Student"
        android:label="@string/menu_WorkOfStudent"
        android:name="com.Julia_lessons.juliaomelart.ui.send.SendFragment"
        tools:layout="@layout/fragment_work_of_student" />
    <fragment
        android:id="@+id/nav_home"
        android:label="@string/menu"
        android:name="com.Julia_lessons.juliaomelart.ui.send.SendFragment"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_send"
        android:name="com.Julia_lessons.juliaomelart.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_whatispatreon" />
</navigation>